cabal-version:                  3.0
name:                           xmobar-rangho
version:                        0.0.0

executable xmobar
    hs-source-dirs:             .
    main-is:                    xmobar.hs
    build-depends:              base >= 4.19.0 && < 5
                              , xmobar >= 0.48.0
    default-language:           Haskell2010
