cabal-version:                  3.0
name:                           xmonad-rangho
version:                        0.0.0


executable xmonad
    hs-source-dirs:             .
    main-is:                    xmonad.hs
    build-depends:              base
                              , containers
                              , stm
                              , utils
                              , X11
                              , xmonad >= 0.18.0
                              , xmonad-contrib >= 0.18.0
    default-language:           Haskell2010


executable xmobar
    hs-source-dirs:             .
    main-is:                    xmobar.hs
    build-depends:              base
                              , process
                              , utils
                              , xmobar >= 0.48.0
    default-language:           Haskell2010


library utils
    hs-source-dirs:             utils
    exposed-modules:            Backlight
    build-depends:              base
                              , directory
                              , filepath
                              , strict
    default-language:           Haskell2010
