cabal-version:                  3.0
name:                           xmonad-rangho
version:                        0.0.0
author:                         RangHo Lee
maintainer:                     hello@rangho.me
build-type:                     Simple


executable xmonad
    hs-source-dirs:             .
    main-is:                    xmonad.hs
    ghc-options:                -threaded -rtsopts -with-rtsopts=-N
    build-depends:              base
                              , bytestring
                              , containers
                              , data-default
                              , directory
                              , filepath
                              , stm
                              , unix
                              , X11
                              , xmonad >= 0.18.0
                              , xmonad-contrib >= 0.18.0
    default-language:           Haskell2010


executable taffybar
    hs-source-dirs:             .
    main-is:                    taffybar.hs
    ghc-options:                -threaded -rtsopts -with-rtsopts=-N
    build-depends:              base
                              , data-default
                              , gtk-strut
                              , hslogger
                              , taffybar >= 4.0.0
                              , text
                              , xdg-basedir
    default-language:           Haskell2010
